trunk/NewArchive/e2fe87c6a09304e944007e2e3c6be869-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:9:26: error: expected type-specifier before ‘basic_ostream’
     using ostream_type = basic_ostream<charT,traits>;
                          ^
main.cpp:12:39: error: expected ‘)’ before ‘&’ token
     cool_ostream_iterator(ostream_type& os) noexcept : os(&os) {}
                                       ^
main.cpp:29:5: error: ‘ostream_type’ does not name a type
     ostream_type* os;
     ^
main.cpp: In member function ‘cool_ostream_iterator<charT, traits>& cool_ostream_iterator<charT, traits>::operator=(T&&)’:
main.cpp:15:11: error: ‘os’ was not declared in this scope
         (*os) << std::forward<T>(t) << '\n';
           ^
main.cpp: In function ‘int main()’:
main.cpp:39:45: error: no matching function for call to ‘cool_ostream_iterator<char>::cool_ostream_iterator(std::ostream&)’
     cool_ostream_iterator<char> it(std::cout);
                                             ^
main.cpp:39:45: note: candidates are:
main.cpp:7:8: note: constexpr cool_ostream_iterator<char>::cool_ostream_iterator()
 struct cool_ostream_iterator : std::iterator<std::output_iterator_tag, void, void, void, void> {
        ^
main.cpp:7:8: note:   candidate expects 0 arguments, 1 provided
main.cpp:7:8: note: constexpr cool_ostream_iterator<char>::cool_ostream_iterator(const cool_ostream_iterator<char>&)
main.cpp:7:8: note:   no known conversion for argument 1 from ‘std::ostream {aka std::basic_ostream<char>}’ to ‘const cool_ostream_iterator<char>&’
main.cpp:7:8: note: constexpr cool_ostream_iterator<char>::cool_ostream_iterator(cool_ostream_iterator<char>&&)
main.cpp:7:8: note:   no known conversion for argument 1 from ‘std::ostream {aka std::basic_ostream<char>}’ to ‘cool_ostream_iterator<char>&&’
